# kp-forecasting-bma

./: README.md  docker-compose.yml  package-lock.json  package.json  query.js  start_services.bat
forecaster/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  supervisord.conf
forecaster/api/: db.py  endpoints.py  main.py  middleware.py  tasks.py
forecaster/kp_forecaster/: bma.py  config.py  evaluation.py  feature_engineering.py  models.py  pipeline.py  plot.py  preprocessing.py
forecaster/scripts/: api.py  main.py  test_db.py
project/: Dockerfile  package-lock.json  package.json
project/src/: App.vue
project/src/assets/: global.css
project/src/components/: Forecast.vue  Header.vue
project/src/pages/: ForecastHistoryPage.vue  ForecastPage.vue  GraphPage.vue  TrainDataPage.vue  UploadPage.vue
project/src/router/: index.js
project/src/services/: api.js
