[project]
name = "gold-sales-forecaster"
version = "0.1.0"
description = ""
authors = [
    {name = "xcurvnubaim",email = "zhariffmarzuqi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "shap (>=0.47.2,<0.48.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gold-sales-forecaster"
version = "0.1.0"
description = ""
authors = ["xcurvnubaim"]
readme = "README.md"
packages = [{ include = "kp_forecaster" }]