[project]
name = "gold-sales-forecaster"
version = "0.1.0"
description = ""
authors = [
    {name = "xcurvnubaim",email = "zhariffmarzuqi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "duckdb (>=1.2.2,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gold-sales-forecaster"
version = "0.1.0"
description = ""
authors = ["xcurvnubaim"]
readme = "README.md"
packages = [{ include = "kp_forecaster" }]

[tool.uv.workspace]
members = [
    "test",
]
